# xarm_ros2

./: ReadMe.md  how_to_run.md  resources.txt
moveit_nodes_pkg/: CMakeLists.txt  package.xml
moveit_nodes_pkg/include/moveit_nodes_pkg/: task_node.h  voice_command_server.h
moveit_nodes_pkg/launch/: constrained_trajectory_analyser.launch.py
moveit_nodes_pkg/src/: cartesian_path_planning_test.cpp  goal_pose_planner_and_executor.cpp  gripper_node.cpp  joints_position_planner_and_executor.cpp  move_to_A_B_C_points.cpp  mover.cpp  task_node.cpp  unity_subscriber.cpp  voice_command_server.cpp
resources/: ChatGPTCode.txt  GeminiCode.txt  motion_executor.cpp  mover.cpp  mover.py
xarm7_voice_command_api/: commands.odt  package.xml  setup.cfg  setup.py
xarm7_voice_command_api/launch/: xarm7_voice_command.launch.py
xarm7_voice_command_api/xarm7_voice_command_api/: alexa_interface.py
xarm_controller/launch/: ros2_control.launch.py
xarm_custome_nodes/: package.xml  setup.cfg  setup.py
xarm_custome_nodes/launch/: custom_nodes.launch.py
xarm_custome_nodes/test/: test_001.py
xarm_custome_nodes/xarm_custome_nodes/: data_from_unity_analysis_node.py  joint_states_subscriber_node.py  mover.py  mover_.py  tcp_pose_publisher_node.py  unity_subscriber.py  unity_to_ros2_publisher_test_node.py
xarm_description/config/kinematics/default/: xarm7_default_kinematics.yaml
xarm_description/launch/: _robot_rviz_display.launch.py
xarm_description/meshes/xarm7/visual/: table_plane.stl
xarm_description/rviz/: display.rviz
xarm_description/urdf/: xarm7.urdf  xarm7_robot.urdf  xarm_device.urdf.xacro  xarm_device_macro.xacro  xarm_without_gripper.urdf
xarm_description/urdf/gripper/: xarm7_gripper.urdf  xarm_gripper.urdf.xacro
xarm_description/urdf/xarm7/: xarm7.urdf.xacro
xarm_gazebo/worlds/: table.world
xarm_moveit_config/config/xarm7/: ompl_planning.yaml
xarm_moveit_config/launch/: _robot_moveit_common.launch.py
xarm_moveit_config/rviz/: moveit.rviz
xarm_moveit_config/srdf/: _xarm7_macro.srdf.xacro
xarm_msgs/: CMakeLists.txt
xarm_msgs/action/: VoiceCommand.action
xarm_msgs/msg/: JointNamesAndAngles.msg  Xarm7MoveitJoints.msg  Xarm7ROSJointsToUnity.msg  Xarm7UnityTargetPoseToROS.msg
xarm_msgs/srv/: GripperPose.srv  JointsPosition.srv  MoverService.srv
xarm_planner/: CMakeLists.txt
xarm_planner/include/xarm_planner/: xarm_planner.h
xarm_planner/launch/: experiment_trajectory.launch.py
xarm_planner/src/: xarm_planner.cpp
xarm_planner/test/: experiment_trajectory_node.cpp
